[package]
name = "nasa_apod"
version = "0.1.0"
authors = ["Abhinav Yadav <abhinavy14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0", features = ["blocking", "json"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
clap = "3.0.0-beta.2"
tokio = { version = "^1", features = ["full"] }
ansi_term = "*"
